--- a/projects/index.html
+++ b/projects/index.html
@@ -17,10 +17,10 @@
    <div class="navbar">
      
   <div class="fade-in nav-items animatedhover">
-    <a href="/socials/">Socials</a>
+    <a href="/home/">Home</a>
   </div>
   <div class="fade-in nav-items">
-    <a href="/projects/">Projects</a>
+    <a href="/socials/">Socials</a>
   </div>
   <div class="fade-in nav-items">
     <a href="https://github.com/sgtbonsai" target=”_blank”>GitHub</a>
@@ -35,27 +35,19 @@
 <!--  title  -->
   <div class="container">
   <div class="typed-out">
-    <h1>sgtbonsai</h1>
+    <h1>Projects</h1>
   </div>
   </div>
-<br> <br> <br> <br>
-<!-- about me  -->
-  <div class="title 2 fade-in">
-    About Me
-  </div>
+<br> <br> <br>  
+<!-- projects  -->
   <br>
   <div style="text-align: center; color: white; padding-left: 10%; padding-right: 10%; font-size: 20px;" class="fade-in">
-    My name is Leo and i'm a 16 year old web developer from Dallas, Texas. <br><br> I technically first started coding in 2017 when I learned very basic HTML, but that stopped within a month. I later restarted coding in January 2021 when I found out you could code a Discord Bot (Check out <a href="projects.html" style="text-decoration: none; color: gray;">projects</a> to learn more.), and I have been going ever since. Now I know basic JavaScript, HTML5, CSS3, Python, and very VERY basic C#.
+     During my time as a "developer", I have contributed to many projects, as well as coded up my own little projects (all of which are on my GitHub page).
+    </div> <br>
+    <div style="text-align: center; color: white; padding-left: 10%; padding-right: 10%; font-size: 20px;" class="fade-in"> 
+      Some of those projects include: <br><br> Frontend developer for Interact <br> Lead developer of the Comet Discord bot (Hosted by Daniel Kravec) <br> A dynamically updating weather website (set locations tho :/) <br> This website ;) <br>
     </div>
 
-<!-- <div class="fade-in">
- <nav>
-    <ul>
-     <li><a href="projects.html">Projects</a></li>
-     <li><a href="socials.html">Socials</a></li>
-     </ul>
-</nav>
-  </div> -->
   <script src="script.js"></script>
 </body>
 
