Fixed hyperlink going to wrong destination

--- a/projects/index.html
+++ b/projects/index.html
@@ -45,7 +45,7 @@
      During my time as a "developer", I have contributed to many projects, as well as coded up my own little projects (all of which are on my GitHub page).
     </div> <br>
     <div style="text-align: center; color: white; padding-left: 10%; padding-right: 10%; font-size: 20px;" class="fade-in"> 
-      Some of those projects include: <br><br> Frontend developer for <a style="text-decoration: none; color: gray;" target=”_blank” href="https://twitter.com/BonsaiSgt">Interact</a> <br> Lead developer of the <a style="text-decoration: none; color: gray;" href="/comet/">Comet</a> Discord bot (Hosted by Daniel Kravec) <br> A dynamically updating weather website (set locations tho :/) <br> <a style="text-decoration: none; color: gray;" href="/rcg/">Random County Generator</a> <br> This website ;) <br>
+      Some of those projects include: <br><br> Frontend developer for <a style="text-decoration: none; color: gray;" target=”_blank” href="https://interact.novapro.net/">Interact</a> <br> Lead developer of the <a style="text-decoration: none; color: gray;" href="/comet/">Comet</a> Discord bot (Hosted by Daniel Kravec) <br> A dynamically updating weather website (set locations tho :/) <br> <a style="text-decoration: none; color: gray;" href="/rcg/">Random County Generator</a> <br> This website ;) <br>
     </div>
 
   <script src="script.js"></script>
