Added weather feature (still under development)

--- a/home/index.html
+++ b/home/index.html
@@ -35,7 +35,7 @@
 <!--  title  -->
   <div class="container">
   <div class="typed-out">
-    <h1>sgtbonsai</h1>
+    <h1>Welcome</h1>
   </div>
   </div>
 <br> <br> <br> <br>
@@ -45,7 +45,7 @@
   </div>
   <br>
   <div style="text-align: center; color: white; padding-left: 10%; padding-right: 10%; font-size: 20px;" class="fade-in">
-    My name is Leo and i'm a 17 year old web developer from Dallas, Texas. <br><br> I technically first started coding in 2017 when I learned very basic HTML, but that stopped within a month. I later restarted coding in January 2021 when I found out you could code a Discord Bot (Check out <a href="/projects/" style="text-decoration: none; color: gray;">projects</a> to learn more.), and I have been going ever since. Now I know basic JavaScript, HTML5, CSS3, Python, and very VERY basic C#.
+    My name is Leo and i'm a 17 year old web developer from the Dallas/Fort Worth metroplex in Texas. <br><br> I technically first started coding in 2017 when I learned very basic HTML, but that stopped within a month. I later restarted coding in January 2021 when I found out you could code a Discord Bot (Check out <a href="/projects/" style="text-decoration: none; color: gray;">projects</a> to learn more.), and I have been going ever since. Now I know basic JavaScript, HTML5, CSS3, Python, and very VERY basic C#.
     </div>
 
 <!-- <div class="fade-in">
