Changed tab title to "[Project] / Leo Tran"

--- a/rcg/index.html
+++ b/rcg/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>BonsaiSgt</title>
+  <title>RCG / Leo Tran</title>
   <link href="/style.css" rel="stylesheet" type="text/css" />
   <link rel="preconnect" href="https://fonts.googleapis.com"> 
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
@@ -31,14 +31,14 @@
 <!--  title  -->
   <div class="container">
   <div class="typed-out">
-    <h1> RCG </h1>
+    <h1> Random County Generator </h1>
   </div>
   </div>
 
   <br> <br> <br> <br> <br>
 
   <div style="text-align: center; color: white; padding-left: 10%; padding-right: 10%; font-size: 20px;" class="fade-in">
-    RCG stands for "Random County Generator". Below, you will find a randomly selected county from the United States. Every time you refresh the page, a new county will appear.
+    Below, you will find a randomly selected county from the United States. Every time you refresh the page, a new county will appear.
     </div> 
     
     <br> <br>
