--- a/home/index.html
+++ b/home/index.html
@@ -45,7 +45,7 @@
   </div>
   <br>
   <div style="text-align: center; color: white; padding-left: 10%; padding-right: 10%; font-size: 20px;" class="fade-in">
-    My name is Leo and i'm a 17 year old web developer from the Dallas/Fort Worth metroplex in Texas. <br><br> I technically first started coding in 2017 when I learned very basic HTML, but that stopped within a month. I later restarted coding in January 2021 when I found out you could code a Discord Bot (Check out <a href="/projects/" style="text-decoration: none; color: gray;">projects</a> to learn more.), and I have been going ever since. Now I know basic JavaScript, HTML5, CSS3, Python, and very VERY basic C#. <br><br> I am also a weather enthusiast, and if Comp Sci doesn't work out for me, then meteorology is my fallback plan. I have loved weather ever since I was a little kid. I always watched The Weather Channel and other weather networks.
+    My name is Leo and i'm an 18 year old web developer from the Dallas/Fort Worth metroplex in Texas. <br><br> I technically first started coding in 2017 when I learned very basic HTML, but that stopped within a month. I later restarted coding in January 2021 when I found out you could code a Discord Bot (Check out <a href="/projects/" style="text-decoration: none; color: gray;">projects</a> to learn more.), and I have been going ever since. Now I know basic JavaScript, HTML5, CSS3, Python, and very VERY basic C#. <br><br> I am also a weather enthusiast, and if Comp Sci doesn't work out for me, then meteorology is my fallback plan. I have loved weather ever since I was a little kid. I always watched The Weather Channel and other weather networks.
     </div>
 
 <!-- <div class="fade-in">
